[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/characters/enemy/EnemyMove.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/characters/enemy/EnemyAggro.gd" type="Script" id=2]
[ext_resource path="res://scenes/characters/enemy/EnemyAggroStates.gd" type="Script" id=3]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

uniform vec4 hit_color : hint_color = vec4(1.0, 0.0, 0.0, 1.0);
uniform float hit_strength : hint_range(0.0,1.0) = 0.0;

void fragment() {
	vec4 custom_color = texture(TEXTURE, UV);
	custom_color.rgb = mix(custom_color.rgb, hit_color.rgb, hit_strength);
	COLOR = custom_color;
}"

[sub_resource type="ShaderMaterial" id=2]
resource_local_to_scene = true
shader = SubResource( 1 )
shader_param/hit_color = Color( 0.74902, 0.14902, 0.317647, 1 )
shader_param/hit_strength = 0.0

[node name="EnemyAggro" instance=ExtResource( 1 )]
collision_layer = 1
script = ExtResource( 2 )

[node name="EnemyStates" parent="." index="0"]
script = ExtResource( 3 )

[node name="Pivot" parent="." index="2"]
material = SubResource( 2 )

[node name="Hurtbox" parent="Pivot" index="2"]
collision_layer = 1
collision_mask = 1

[node name="Vision" type="Area2D" parent="Pivot" index="3"]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pivot/Vision" index="0"]

[node name="VisionCast" type="RayCast2D" parent="." index="4"]
position = Vector2( 0, -2 )
collision_mask = 2

[connection signal="body_entered" from="Pivot/Vision" to="." method="_on_Vision_body_entered"]
[connection signal="body_exited" from="Pivot/Vision" to="." method="_on_Vision_body_exited"]
